syntax = "proto3";

package org.example;

import "dev/restate/ext.proto";

service ExampleService {

	option (dev.restate.ext.service_type) = UNKEYED;

	rpc SampleCall(SampleRequest) returns (SampleResponse) {};
}

message SampleRequest {
	string request = 1;
}

message SampleResponse {
	string response = 1;
}
